# monosecret

./: .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PR-CHANGES.md  context.md  devenv.nix  devenv.yaml  dist-workspace.toml  dprint.json  monochange.toml  monosecret.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml  rust-toolchain.toml
.changeset/: 1780486946-monosecret.md  1782210681-monosecret-rust.md  fix-release-pr-packaging.md  secret-access-reasons-monosecret.md  typescript-client-monosecret.md
.claude/commands/: release.md
.dart_tool/: package_config.json
.github/: zizmor.yml
.github/actions/devenv/: action.yaml
.github/workflows/: changeset-policy.yml  ci.yml  publish.yml  release-pr.yml  release.yml
.monochange/releases/026b1bba00fe5394/: release.json
.monochange/releases/232e580c046e99ef/: release.json
.monochange/releases/70b5b0dcc8f7b673/: release.json
.templates/: readme.t.md
docs/: README.md  astro.config.mjs  astro.config.ts  package-lock.json  package.json  spec-provider-relative-locations.md  worker.js  wrangler.jsonc
docs/src/content/docs/: quick-start.mdx
docs/src/content/docs/blog/: secretspec-0-12-audit-logs-and-coding-agents.md
docs/src/content/docs/concepts/: audit.md  declarative.md  generation.md  inheritance.md  overview.md  profiles.md  providers.md
docs/src/content/docs/providers/: awssm.md  bws.md  dotenv.md  env.md  gcsm.md  keyring.md  lastpass.md  onepassword.md  pass.md  protonpass.md  vault.md
docs/src/content/docs/reference/: adding-providers.md  cli.md  configuration.md  providers.md
docs/src/content/docs/sdk/: rust.md
docs/src/overrides/: SocialIcons.astro
docs/src/pages/: index.astro
docs/src/styles/: landing.css
examples/derive/: Cargo.toml  README.md  derive.rs  monosecret.toml
monosecret/: Cargo.toml  README.md
monosecret/src/: audit.rs  config.rs  error.rs  generator.rs  lib.rs  secrets.rs  tests.rs  validation.rs
monosecret/src/cli/: mod.rs
monosecret/src/fixtures/: issue_36_monosecret.toml
monosecret/src/provider/: awssm.rs  bws.rs  dotenv.rs  env.rs  gcsm.rs  keyring.rs  lastpass.rs  macros.rs  mod.rs  onepassword.rs  onepassword_env.rs  pass.rs  protonpass.rs  tests.rs  vault.rs
monosecret/tests/: check_detail_provider_refs.rs  filtered_run_tests.rs  pr_example_tests.rs
monosecret_derive/: Cargo.toml
monosecret_derive/src/: lib.rs  tests.rs
monosecret_derive/tests/: compile_tests.rs  integration_test.rs  macro_expansion.rs  snapshot_tests.rs  test_macro.rs  validation_test.rs
monosecret_derive/tests/fixtures/: basic.toml  complex.toml  empty.toml  invalid_validation.toml  profile_inheritance.toml  profiles.toml
monosecret_derive/tests/ui/: file_not_found.rs  file_not_found.stderr  invalid_toml.rs  invalid_toml.stderr  invalid_toml_embedded.rs  invalid_toml_embedded.stderr  valid_generation_embedded.toml
scripts/npm/: build-packages.js  populate-packages.js
sdk/dart/: CHANGELOG.md  README.md  pubspec.yaml
sdk/dart/lib/: monosecret.dart
secretspec-derive/src/: tests.rs
secretspec/src/: config.rs  lib.rs  secrets.rs  tests.rs
secretspec/src/cli/: mod.rs
secretspec/src/provider/: macros.rs  mod.rs  onepassword.rs  onepassword_env.rs
secretspec/tests/: check_detail_provider_refs.rs  filtered_run_tests.rs  pr_example_tests.rs
tests/: cli-integration.sh  test_provider_not_found.rs
tests/common/: mod.rs
tests/fixtures/configs/: minimal.toml
tests/fixtures/configs/auth/: secretspec.toml
tests/fixtures/configs/base/: secretspec.toml
tests/fixtures/configs/common/: secretspec.toml
tests/integration/: profile_inheritance_tests.rs
