[workspace]
members = ["examples/derive", "monosecret", "monosecret_derive"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
aws-config = "1"
aws-sdk-secretsmanager = "1"
bitwarden = { version = "2.0.0", features = ["secrets"] }
clap = { version = "4.0", features = ["derive", "env"] }
colored = "3.0"
data-encoding = "2"
dotenvy = "0.15"
etcetera = "0.11"
google-cloud-secretmanager-v1 = "1.2"
http = "1.0"
inquire = { version = "0.9.4", features = ["experimental-multiline-input"] }
insta = "1.34"
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
keyring-core = "1.0.0"
linkme = "0.3"
miette = { version = "7.6", features = ["fancy"] }
monosecret = { version = "0.1.0", path = "./monosecret", default-features = false }
monosecret_derive = { version = "0.1.0", path = "./monosecret_derive" }
percent-encoding = "2.3"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.10.1"
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "rustls",
] }
rsa = { version = "0.9", features = ["pem"] }
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2.0"
tempfile = "3.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
toml = "1.1.2+spec-1.1.0"
toml_edit = "0.25.12+spec-1.1.0"
tracing = "0.1"
trybuild = "1.0"
url = "2.5.4"
uuid = { version = "1", features = ["v4"] }
windows-native-keyring-store = "1.1.0"
zbus-secret-service-keyring-store = { version = "1.0.0", features = [
  "rt-tokio-crypto-rust",
] }
detect-coding-agent = "0.1"
whoami = "2.0"
jiff = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"

[workspace.lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
indexing_slicing = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
