[package]
name = "monosecret_derive-example"
version = "0.0.0"
edition = "2021"
publish = false

[lints]
workspace = true

[[bin]]
name = "derive"
path = "derive.rs"

[dependencies]
monosecret = { path = "../../monosecret" }
monosecret_derive = { path = "../../monosecret_derive" }
secrecy = { workspace = true }
serde = { workspace = true }
